Bug 936440 - Report UTF-16LE or UTF-16BE instead of UTF-16 as the BOM-sniffed encoding. r=emk.